# Quaxly

./: .dockerignore  .gitignore  Quaxly.js  autocomplete.py  bot.py  commands.js  database.py  db.py  dockerfile  fixtable.sql  format_track_name.py  game_utils.py  lounge_style.mplstyle  main.py  models.py  pyproject.toml  redeploy.sh  requirements.txt  sql.py  tables.sql  tracklist.txt  transfer.py  transfer_to_neo4j.py  utils.js  utils.py
.github/: dependabot.yml
.github/workflows/: deployement.yml  deployment.yml
cogs/: __init__.py  db_sync.py  debug.py  display_time.py  extension.py  help.py  import_csv.py  import_time.py  lakitu_dump.py  latency.py  lineup.py  logging.py  logs.py  lounge_profil.py  lounge_profile.py  manage_time.py  name_history.py  presence_update.py  register.py  startup.py  sync.py  team_stats.py  tracks.py  war_stats.py
cogs/dx/: __init__.py  autocomplete.py  base.py  delete_time.py  display_time.py  import_time.py  save_time.py
cogs/war/: __init__.py  base.py  war_bot.py  war_stats.py
commands/: delete_time.js  display_time.js  help.js  import_times.js  lineup.js  name_history.js  register_user.js  remove_user.js  save_time.js  team_mmr.js  team_stats.js  tracks.js
