[project]
name = "quaxly"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.14",
    "alembic>=1.12.0",
    "discord-py==2.5.2",
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "psycopg2-binary>=2.9.0",
    "redis==6.2.0",
    "sqlalchemy>=2.0.0",
]
