[project]
name = "quaxly"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.3",
    "alembic>=1.12.0",
    "discord-py==2.6.4",
    "matplotlib==3.10.8",
    "psycopg2-binary>=2.9.0",
    "redis==7.1.0",
    "sqlalchemy>=2.0.0",
]
